src/objects/Extended_Finance__c.object
<CustomObject>
    <description>A table that tracks patients/consults who looked in to our extended financing option</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Consult record that applied for the loan</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Extended Finances</relationshipLabel>
        <relationshipName>Extended_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alphaeon_Financed__c</fullName>
        <label>Alphaeon Financed</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <formula>Treatment_Value__c - CareCredit_Finance__c - Cash_Down_Payment__c - SpringStone_Financed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CareCredit_Finance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount financed via Care Credit</description>
        <label>CareCredit Finance</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Down_Payment__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount of cash put down on the treatment</description>
        <label>Cash Down Payment</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The center the patient was associated with when the extended finance option was accepted. Locking this is so we know which form to display in the future if we have more than one.</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Extended Finances</relationshipLabel>
        <relationshipName>Extended_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Did_Patient_Accept__c</fullName>
        <description>Did the Patient accep the financing offer</description>
        <label>Did Patient Accept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Charge__c</fullName>
        <formula>if(( Number_of_Payments__c * Per_Payment_Amount__c ) - Amount_Financed__c &lt; 0, 0, ( Number_of_Payments__c * Per_Payment_Amount__c ) - Amount_Financed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <description>Date the first payment will be made</description>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <defaultValue>4.9</defaultValue>
        <description>Interest Rate for the loan</description>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Itemization_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the patient requested an itemization form.</description>
        <label>Itemization Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Printed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Printed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extended_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Printed_Time__c</fullName>
        <label>Last Printed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The prospective patient who applied for this loan</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Extended Finances</relationshipLabel>
        <relationshipName>Extended_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Number of Payments to be made</description>
        <label>Number of Payments</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Payment_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount of each individual payment</description>
        <label>Per Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpringStone_Financed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Amount of the treatment being covered by SpringStone FInancial</description>
        <label>SpringStone Financed</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The total value for treating this patient</description>
        <label>Treatment Value</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Was_Form_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the Loan Form Printed out</description>
        <label>Was Form Printed</label>
        <type>Checkbox</type>
    </fields>
    <label>Extended Finance</label>
    <nameField>
        <displayFormat>EFL-{0000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>